Add graph mapper